Various semantics-preserving cleanups
The changes in this CL should not alter behaviour, except that some
areas are now more null-safe than previously.

Bug: n/a
Test: existing
Change-Id: I51c1deecd38837c7e7344d9692807a5dae948753

GitOrigin-RevId: 2b9d0821666f4557e7865389de68023d27a1c539