@@ -48,6 +48,7 @@ import com.android.utils.HtmlBuilder;
 import com.android.utils.PositionXmlParser;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
+import com.google.common.collect.Streams;
 import com.intellij.icons.AllIcons;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.ActionManager;
@@ -103,10 +104,14 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
+import java.util.function.BiFunction;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 import javax.swing.Icon;
 import javax.swing.JEditorPane;
 import javax.swing.JMenuItem;
@@ -238,20 +243,23 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     JMenuItem gotoItem = new JBMenuItem("Go to Declaration");
     gotoItem.addActionListener(e -> {
       TreePath treePath = myTree.getSelectionPath();
-      final ManifestTreeNode node = (ManifestTreeNode)treePath.getLastPathComponent();
-      if (node != null) {
-        goToDeclaration(node.getUserObject());
+      if (treePath != null) {
+        if (treePath.getLastPathComponent() instanceof ManifestTreeNode node) {
+          goToDeclaration(node.getUserObject());
+        }
       }
     });
     myPopup.add(gotoItem);
     myRemoveItem = new JBMenuItem("Remove");
     myRemoveItem.addActionListener(e -> {
       TreePath treePath = myTree.getSelectionPath();
-      final ManifestTreeNode node = (ManifestTreeNode)treePath.getLastPathComponent();
-
-      WriteCommandAction.writeCommandAction(myFacet.getModule().getProject(), ManifestUtils.getMainManifest(myFacet)).withName("Removing manifest tag").run(()-> {
-        ManifestUtils.toolsRemove(ManifestUtils.getMainManifest(myFacet), node.getUserObject());
-      });
+      if (treePath != null) {
+        if (treePath.getLastPathComponent() instanceof ManifestTreeNode node) {
+          WriteCommandAction.writeCommandAction(myFacet.getModule().getProject(), ManifestUtils.getMainManifest(myFacet))
+            .withName("Removing manifest tag")
+            .run(() -> ManifestUtils.toolsRemove(ManifestUtils.getMainManifest(myFacet), node.getUserObject()));
+        }
+      }
     });
     myPopup.add(myRemoveItem);
 
@@ -315,9 +323,8 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
       .registerCustomShortcutSet(ActionManager.getInstance().getAction(IdeActions.ACTION_GOTO_DECLARATION).getShortcutSet(), myTree);
   }
 
-  @NotNull
-  private TreeSpeedSearch addSpeedSearch() {
-    return TreeSpeedSearch.installOn(myTree);
+  private void addSpeedSearch() {
+    TreeSpeedSearch.installOn(myTree);
   }
 
 
@@ -419,7 +426,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
           }
           else {
             File location = record.getActionLocation().getFile().getSourceFile();
-            if (location != null && !files.contains(location)) {
+            if (location != null) {
               files.add(location);
             }
           }
@@ -480,7 +487,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     List<MergingReport.Record> errors =
       myManifest.getLoggingRecords().stream()
         .filter(record -> record.getSeverity().equals(MergingReport.Record.Severity.ERROR))
-        .collect(Collectors.toList());
+        .toList();
     if (!errors.isEmpty()) {
       appendMergeRecordTitle(sb, "Merge Errors");
       errors.forEach((record) -> prepareErrorRecord(sb, record));
@@ -488,7 +495,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
 
     List<MergingReport.Record> warnings = myManifest.getLoggingRecords().stream()
       .filter(record -> record.getSeverity().equals(MergingReport.Record.Severity.WARNING))
-      .collect(Collectors.toList());
+      .toList();
     if (!warnings.isEmpty()) {
       appendMergeRecordTitle(sb, "Merge Warnings");
       warnings.forEach((record) -> prepareErrorRecord(sb, record));
@@ -571,8 +578,14 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     sb.addHtml(getHtmlForErrorRecord(record.getSeverity()));
     sb.add(" ");
     try {
-      sb.addHtml(getErrorHtml(myFacet, record.getMessage(), record.getSourceLocation(), myHtmlLinkManager,
-                              LocalFileSystem.getInstance().findFileByIoFile(myFiles.get(0).getFile()), myManifestEditable));
+      File ioFile = myFiles.get(0).getFile();
+      if (ioFile != null) {
+        sb.addHtml(getErrorHtml(myFacet, record.getMessage(), record.getSourceLocation(), myHtmlLinkManager,
+                                LocalFileSystem.getInstance().findFileByIoFile(ioFile), myManifestEditable));
+      }
+      else {
+        sb.add(record.getMessage());
+      }
     }
     catch (Exception ex) {
       Logger.getInstance(ManifestPanel.class).error("error getting error html", ex);
@@ -675,20 +688,18 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
   }
 
   private int getFileIndex(@NotNull File file) {
-    int index = 0;
-    for (ManifestFileWithMetadata metadata : myFiles) {
-      if (file.getAbsolutePath().equals(metadata.getFile().getAbsolutePath())) {
-        return index;
-      }
-      index++;
-    }
-    for (ManifestFileWithMetadata metadata : myOtherFiles) {
-      if (file.getAbsolutePath().equals(metadata.getFile().getAbsolutePath())) {
-        return index;
-      }
-      index++;
-    }
-    return index;
+    BiFunction<ManifestFileWithMetadata, Integer, Integer> f = (m, i) -> {
+      File metadataFile = m.getFile();
+      if (metadataFile == null) return null;
+      if (file.getAbsolutePath().equals(metadataFile.getAbsolutePath())) return i;
+      return null;
+    };
+    Stream<ManifestFileWithMetadata> metadataFiles = Streams.concat(myFiles.stream(), myOtherFiles.stream());
+    Stream<Integer> indices = IntStream.range(0, myFiles.size() + myOtherFiles.size()).boxed();
+    return Streams.zip(metadataFiles, indices, f)
+      .filter(Objects::nonNull)
+      .findFirst()
+      .orElseGet(() -> myFiles.size() + myOtherFiles.size());
   }
 
   private boolean canRemove(@NotNull Node node) {
@@ -750,16 +761,10 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
       String action = message.substring(index, message.indexOf(' ', index));
       sb.add(message.substring(0, index));
       message = message.substring(index);
-      if ("add".equals(action)) {
-        sb.addHtml(getErrorAddHtml(facet, message, position, htmlLinkManager,
-                                   currentlyOpenFile));
-      }
-      else if ("use".equals(action)) {
-        sb.addHtml(getErrorUseHtml(facet, message, position, htmlLinkManager,
-                                   currentlyOpenFile));
-      }
-      else if ("remove".equals(action)) {
-        sb.add(message);
+      switch (action) {
+        case "add" -> sb.addHtml(getErrorAddHtml(facet, message, position, htmlLinkManager, currentlyOpenFile));
+        case "use" -> sb.addHtml(getErrorUseHtml(facet, message, position, htmlLinkManager, currentlyOpenFile));
+        case "remove" -> sb.add(message);
       }
     }
     else {
@@ -814,9 +819,9 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
   /**
    * First attempt to get an XmlFile from the file where we detected the error during manifest merger but fallback to the main manifest
    * if we fail.
-   *
-   * This file is usually the main manifest file of this facet but not always. In case when we have a dynamic feature withina module,
-   * the module's main manifest differ from the file where the manifest merger error is detected.
+   * <p>
+   * This file is usually the main manifest file of this facet but not always. In case when we have a dynamic feature within a module,
+   * the module's main manifest differs from the file where the manifest merger error is detected.
    *
    * @param facet Android Facet
    * @param manifestErrorSourceFile A file where we detected an error during manifest merger.
@@ -894,7 +899,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     Runnable link =
       () -> {
         Runnable linkAction = () -> {
-          // We reparse the buildModel as it is possible that it has change since this link was created.
+          // We reparse the buildModel as it is possible that it has changed since this link was created.
           ProjectBuildModel pbm = ProjectBuildModel.get(facet.getModule().getProject());
           GradleBuildModel gbm = pbm.getModuleBuildModel(facet.getModule());
 
@@ -904,7 +909,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
 
           gbm.android().defaultConfig().minSdkVersion().setValue(finalMinSdk);
           ApplicationManager.getApplication().invokeAndWait(() -> WriteCommandAction
-            .runWriteCommandAction(facet.getModule().getProject(), "Update build file minSdkVersion", null, () -> pbm.applyChanges(),
+            .runWriteCommandAction(facet.getModule().getProject(), "Update build file minSdkVersion", null, pbm::applyChanges,
                                    gbm.getPsiFile()));
           // We must make sure that the files have been updated before we sync, we block above but not here.
           Runnable syncRunnable = () -> requestSync(facet.getModule().getProject());
@@ -938,9 +943,8 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
                                 final @NotNull String attributeName,
                                 final @NotNull String attributeValue) {
     final Project project = file.getProject();
-    writeCommandAction(project).withName("Apply manifest suggestion").run(() -> {
-      ManifestUtils.addToolsAttribute(file, element, attributeName, attributeValue);
-    });
+    writeCommandAction(project).withName("Apply manifest suggestion")
+      .run(() -> ManifestUtils.addToolsAttribute(file, element, attributeName, attributeValue));
   }
 
   @NotNull
@@ -977,7 +981,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
 
     if (file != null && NAV_FILE_PATTERN.matcher(FileUtils.toSystemIndependentPath(file.toString())).matches()) {
       String source = "";
-      Boolean isProjectFile = false;
+      boolean isProjectFile = false;
 
 
       File resDir = file.getParentFile() == null ? null : file.getParentFile().getParentFile();
@@ -1045,7 +1049,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
       if (source == null) {
         source = file.getName();
         if (!SourcePosition.UNKNOWN.equals(sourcePosition)) {
-          source += ":" + String.valueOf(sourcePosition);
+          source += ":" + sourcePosition;
         }
       }
       return new ManifestXmlWithMetadata(ManifestXmlType.ANDROID_MANIFEST_XML, file, source, isProjectFile, sourcePosition);
@@ -1054,8 +1058,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
   }
 
   private void describePosition(@NotNull HtmlBuilder sb, ManifestFileWithMetadata manifestFile) {
-    if (manifestFile instanceof InjectedBuildDotGradleFile) {
-      InjectedBuildDotGradleFile injectedFile = (InjectedBuildDotGradleFile) manifestFile;
+    if (manifestFile instanceof InjectedBuildDotGradleFile injectedFile) {
       if (injectedFile.getFile() != null) {
         sb.addHtml("<a href=\"");
         sb.add(injectedFile.getFile() .toURI().toString());
@@ -1068,9 +1071,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
       }
       return;
     }
-    if (manifestFile instanceof ManifestXmlWithMetadata) {
-      ManifestXmlWithMetadata manifestXml = (ManifestXmlWithMetadata)manifestFile;
-
+    if (manifestFile instanceof ManifestXmlWithMetadata manifestXml) {
       if (manifestXml.getType() == ManifestXmlType.NAVIGATION_XML) {
         sb.addHtml("<a href=\"");
         sb.add(manifestXml.getFile().toURI().toString());
@@ -1147,8 +1148,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     @Override
     public int getChildCount() {
       Node obj = getUserObject();
-      if (obj instanceof Element) {
-        Element element = (Element)obj;
+      if (obj instanceof Element element) {
         NamedNodeMap attributes = element.getAttributes();
         int count = attributes.getLength();
         NodeList childNodes = element.getChildNodes();
@@ -1168,8 +1168,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     @NotNull
     public ManifestTreeNode getChildAt(int index) {
       Node obj = getUserObject();
-      if (children == null && obj instanceof Element) {
-        Element element = (Element)obj;
+      if (children == null && obj instanceof Element element) {
         NamedNodeMap attributes = element.getAttributes();
         for (int i = 0, n = attributes.getLength(); i < n; i++) {
           add(new ManifestTreeNode(attributes.item(i)));
@@ -1196,12 +1195,10 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
     @NotNull
     public String toString() {
       Node obj = getUserObject();
-      if (obj instanceof Attr) {
-        Attr xmlAttribute = (Attr)obj;
+      if (obj instanceof Attr xmlAttribute) {
         return xmlAttribute.getName() + " = " + xmlAttribute.getValue();
       }
-      if (obj instanceof Element) {
-        Element xmlTag = (Element)obj;
+      if (obj instanceof Element xmlTag) {
         return xmlTag.getTagName();
       }
       return obj.toString();
@@ -1264,13 +1261,11 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
                                       boolean leaf,
                                       int row,
                                       boolean hasFocus) {
-      if (value instanceof ManifestTreeNode) {
-        ManifestTreeNode node = (ManifestTreeNode)value;
+      if (value instanceof ManifestTreeNode node) {
 
         setIcon(getNodeIcon(node.getUserObject()));
 
-        if (node.getUserObject() instanceof Element) {
-          Element element = (Element)node.getUserObject();
+        if (node.getUserObject() instanceof Element element) {
           append("<");
 
           append(element.getTagName(), myTagNameAttributes);
@@ -1278,8 +1273,7 @@ public class ManifestPanel extends JPanel implements TreeSelectionListener {
             append(" ... " + getCloseTag(node));
           }
         }
-        if (node.getUserObject() instanceof Attr) {
-          Attr attr = (Attr)node.getUserObject();
+        if (node.getUserObject() instanceof Attr attr) {
           // if we are the last child, add ">"
           ManifestTreeNode parent = node.getParent();
           assert parent != null; // can not be null if we are a XmlAttribute
